data/derived/sp14/progs/unify/prog2538.ml.out
Characters 3-4:
  (x<y?x:sin(pi*x)*cos(pi*(x+y)/2));;
     ^
Error: This expression has type int
       This is not a function; it cannot be applied.
